--- a/app/client/styles/app/Instrument/instrument.less
+++ b/app/client/styles/app/Instrument/instrument.less
@@ -10,7 +10,7 @@
         display: block;
     }
 
-    /*.dropdown {
+    .dropdown {
         .dropdown-menu {
             background: @panel-bg;
             border: none !important;
@@ -29,7 +29,7 @@
                 }
             }
         }
-    }*/
+    }
 }
 
 .instrument-templates {
