--- a/app/client/src/app/Instrument/Partial/Instrument/menu.html
+++ b/app/client/src/app/Instrument/Partial/Instrument/menu.html
@@ -1,50 +1,4 @@
 <ul class="instrument-menu">
-    <!-- Scale dropdown -->
-    <!--<li class="scale-dropdown" data-uib-dropdown="">
-        <a href="#" data-uib-dropdown-toggle="" role="button">
-            <span class="fa-stack">
-                <span class="fa fa-circle-thin fa-stack-2x"></span>
-                <span class="music-icon music-icon-tuning fa-stack-1x"></span>
-            </span>
-
-            <span class="caret"></span>
-        </a>
-
-        <ul class="dropdown-menu dropdown-menu-check">
-            <li class="active">
-                <a href="#">
-                    <span class="link-label">Standard</span>
-                    <small>E A D G B E</small>
-                </a>
-            </li>
-
-            <li class="dropdown-header">Power</li>
-
-            <li>
-                <a href="#">
-                    <span class="link-label">Drop D</span>
-                    <small>D A D G B E</small>
-                </a>
-            </li>
-
-            <li>
-                <a href="#">
-                    <span class="link-label">Drop C</span>
-                    <small>C G C F A D</small>
-                </a>
-            </li>
-
-            <li class="dropdown-header">Open</li>
-
-            <li>
-                <a href="#">
-                    <span class="link-label">Open C</span>
-                    <small>C G C G C E</small>
-                </a>
-            </li>
-        </ul>
-    </li>-->
-
     <!-- Instrument dropdown -->
     <li class="guitar-dropdown" data-uib-dropdown="">
         <a href="#" data-uib-dropdown-toggle="" role="button" aria-haspopup="true" aria-expanded="false">
@@ -84,6 +38,14 @@
                 <a href="#">
                     <span class="link-label">Takamine folk</span>
                     <small>E A D G B E</small>
+                </a>
+            </li>
+
+            <!-- Add a new instrument -->
+            <li class="text-center">
+                <a href="#">
+                    <span class="fa fa-plus"></span>
+                    Add instrument
                 </a>
             </li>
         </ul>
