work on angular 2 version of the UI

--- a/client/back/app/Instrument/Partial/Instrument/show.html
+++ b/client/back/app/Instrument/Partial/Instrument/show.html
@@ -25,7 +25,7 @@
 
     <div class="instrument-show row">
         <div class="col-md-2">
-            <div class="form-group" style="margin-bottom: 30px;">
+            <div class="form-group" style="margin-bottom: 20px;">
                 <div class="widget instrument-type">
                     <span>{{ showCtrl.resource.relationships.instrumentType.data.attributes.name }}</span>
 
@@ -33,7 +33,7 @@
                 </div>
             </div>
 
-            <div style="margin-bottom: 30px;">
+            <div style="margin-bottom: 20px;">
                 <ui-flag data-type="primary" data-value="isFavorite">
                     <span class="fa fa-heart"></span>
                     <span>Favorite</span>
@@ -45,7 +45,7 @@
                 </ui-flag>
             </div>
 
-            <a href="" class="btn btn-block btn-danger">
+            <a href="" class="btn btn-sm btn-block btn-danger">
                 <span class="fa fa-fw fa-trash-o"></span>
                 Delete instrument
             </a>
