--- a/client/src/components/app.component.html
+++ b/client/src/components/app.component.html
@@ -1,3 +1,8 @@
-<h1>
-    COUCOU
-</h1>
+<!-- Top bar of the application -->
+<ui-header></ui-header>
+
+<!-- Menu of the application -->
+<ui-menu></ui-menu>
+
+<!-- Current view -->
+<router-outlet></router-outlet>
