--- a/client/back/styles/core/panels.less
+++ b/client/back/styles/core/panels.less
@@ -20,5 +20,5 @@
 
     .box-shadow(none);
     border: none;
-    margin-bottom: @grid-gutter-width;
+    /*margin-bottom: @grid-gutter-width;*/
 }
