fix path to bootstrap and font awesome

--- a/client/back/styles/app.less
+++ b/client/back/styles/app.less
@@ -3,9 +3,9 @@
  */
 
 // Include Bootstrap
-@import "../bower_components/bootstrap/less/bootstrap.less";
+@import "../../bower_components/bootstrap/less/bootstrap.less";
 // Include FontAwesome
-@import "../bower_components/font-awesome/less/font-awesome.less";
+@import "../../bower_components/font-awesome/less/font-awesome.less";
 
 // Include MusicFont
 @import "music-font/less/music-font.less";
