--- a/client/src/components/app.component.html
+++ b/client/src/components/app.component.html
@@ -1,8 +1,14 @@
+<!-- Skip navigation for accessibility -->
+<a href="#content" class="sr-only">Skip navigation and go to content</a>
+
 <!-- Top bar of the application -->
 <ui-header></ui-header>
 
 <!-- Menu of the application -->
 <ui-menu></ui-menu>
 
+<!-- Alerts -->
+<ui-alert></ui-alert>
+
 <!-- Current view -->
-<router-outlet></router-outlet>
+<router-outlet id="content" class="content"></router-outlet>
