--- a/client/styles/_variables.custom.scss
+++ b/client/styles/_variables.custom.scss
@@ -11,13 +11,14 @@ $header-menu-bg: #FFF;
 //
 
 $menu-bg:        $gray-lighter;
-$menu-font-size: 2rem;
+$menu-font-size: 1.5rem;
 // Defines the width of the menu for large screens (displayed fixed right)
 $menu-width:     60px;
 // Defines the height of the menu for small screens (displayed fixed bottom)
-$menu-height:    ($menu-font-size * $line-height) !default;
+$menu-height:    ($menu-font-size * $line-height + ($navbar-padding-vertical * 2)) !default;
 
 // Content
 //
 
 $content-bg:     #FFF;
+$content-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
