--- a/client/styles/components/app.scss
+++ b/client/styles/components/app.scss
@@ -22,7 +22,7 @@ music-tools {
 .app-loading {
   text-align: center;
 
-  padding: floor($grid-gutter-width / 2);
+  padding: $grid-gutter-width / 2;
 
   .app-loading-spinner {
 
@@ -37,7 +37,8 @@ music-tools {
   position: relative;
   height: 100%;
   overflow-y: auto;
-  padding-top: floor($grid-gutter-width / 2);
-  padding-bottom: floor($grid-gutter-width / 2);
+  padding-top: $grid-gutter-width / 2;
+  padding-bottom: $grid-gutter-width / 2;
   background: $content-bg;
+  box-shadow: $content-shadow;
 }
