--- a/client/styles/_variables.custom.scss
+++ b/client/styles/_variables.custom.scss
@@ -1,17 +1,25 @@
 $box-shadow-base: 0 0 2px rgba(0, 0, 0, 0.5);
 
+$zindex-ui-alert: 1060 !default;
+
 // Header
 //
 
 $header-height:  (($font-size-base * $line-height) + ($navbar-padding-vertical * 2)) !default;
-$header-bg:      $gray-lighter;
-$header-menu-bg: #FFF;
+$header-bg:      rgba(0, 0, 0, 0.25);
+$header-menu-bg: rgba(0, 0, 0, 0.5);
 
 // Menu
 //
 
-$menu-bg:        $gray-lighter;
-$menu-font-size: 1.5rem;
+$menu-bg:           rgba(0, 0, 0, 0.25);
+
+// Text styles
+$menu-font-size:    1.5rem;
+$menu-color:        $body-color !default;
+$menu-hover-color:  rgba(255,255,255,.75) !default;
+$menu-active-color: $brand-primary !default;
+
 // Defines the width of the menu for large screens (displayed fixed right)
 $menu-width:     60px;
 // Defines the height of the menu for small screens (displayed fixed bottom)
@@ -20,5 +28,5 @@ $menu-height:    ($menu-font-size * $line-height + ($navbar-padding-vertical * 2
 // Content
 //
 
-$content-bg:     #FFF;
-$content-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
+$content-bg:     none;
+$content-shadow: none;
