--- a/client/src/components/common/alert/alert.component.html
+++ b/client/src/components/common/alert/alert.component.html
@@ -1,36 +1,30 @@
-<div *ngFor="let alert of alerts" (click)="removeAlert(alert)" class="alert alert-{{ alert.type }}" role="alert">
-    <div class="row">
-        <div class="col-md-4 col-md-offset-3">
-            <span class="alert-icon fa-stack">
-                <span class="fa fa-circle-thin fa-stack-2x"></span>
-                <span class="fa fa-stack-1x"
-                      [ngClass]="{
-                        'fa-check': 'success' == alert.type,
-                        'fa-minus': 'danger' == alert.type,
-                        'fa-exclamation': 'warning' == alert.type,
-                        'fa-info': 'info' == alert.type
-                      }"
-                ></span>
-            </span>
+<div *ngIf="alerts[0]" (click)="removeAlert()" class="alert alert-{{ alerts[0].type }} text-center" role="alert">
+    <span class="alert-icon fa-stack">
+        <span class="fa fa-circle-thin fa-stack-2x"></span>
+        <span class="fa fa-stack-1x"
+              [ngClass]="{
+                'fa-check': 'success' == alerts[0].type,
+                'fa-minus': 'danger' == alerts[0].type,
+                'fa-exclamation': 'warning' == alerts[0].type,
+                'fa-info': 'info' == alerts[0].type
+              }"
+        ></span>
+    </span>
 
-            <span class="alert-message">{{ alert.message }}</span>
-        </div>
+    <span class="alert-message">{{ alerts[0].message }}</span>
 
-        <div class="col-md-2">
-            <!-- Detail -->
-            <a href="" class="alert-link" (click)="openDetail(alert)" *ngIf="alert.detail">
-                <!--<span class="fa fa-fw fa-plus"></span>-->
-                DETAIL
-            </a>
+    <!-- Detail -->
+    <a href="" class="alert-link" (click)="openDetail()" *ngIf="alerts[0].detail">
+        DETAIL
+    </a>
 
-            <!-- Action button -->
-            <a href="" class="alert-link" (click)="openDetail(alert)" *ngIf="alert.cancel">
-                <!--<span class="fa fa-fw fa-plus"></span>-->
-                CANCEL
-            </a>
-        </div>
-    </div>
+    <!-- Retry -->
+    <a href="" class="alert-link" (click)="openDetail()" *ngIf="alerts[0].retry">
+        RETRY
+    </a>
 
-
-
+    <!-- Cancel -->
+    <a href="" class="alert-link" (click)="openDetail()" *ngIf="alerts[0].cancel">
+        CANCEL
+    </a>
 </div>
