--- a/client/styles/_variables.scss
+++ b/client/styles/_variables.scss
@@ -458,20 +458,20 @@ $jumbotron-bg:                   $gray-lighter !default;
 // Define colors for form feedback states and, by default, alerts.
 
 $state-success-text:             #dff0d8 !default;
-$state-success-bg:               #3c763d !default;
-$state-success-border:           $state-success-bg !default;
+$state-success-bg:               rgba(60, 118, 61, 0.75) !default;
+$state-success-border:           transparent !default;
 
 $state-info-text:                #d9edf7 !default;
-$state-info-bg:                  #31708f !default;
-$state-info-border:              $state-info-bg !default;
+$state-info-bg:                  rgba(49, 112, 143, 0.75) !default;
+$state-info-border:              transparent !default;
 
 $state-warning-text:             #fcf8e3 !default;
 $state-warning-bg:               #8a6d3b !default;
-$state-warning-border:           $state-warning-bg !default;
+$state-warning-border:           transparent !default;
 
 $state-danger-text:              #f2dede !default;
 $state-danger-bg:                #a94442 !default;
-$state-danger-border:            $state-danger-bg !default;
+$state-danger-border:            transparent !default;
 
 
 // Cards
