--- a/client/styles/_variables.custom.scss
+++ b/client/styles/_variables.custom.scss
@@ -1,4 +1,4 @@
-$box-shadow-base: 0 0 2px rgba(0, 0, 0, 0.5);
+$box-shadow-base: 0 0 2px 1px rgba(0, 0, 0, 0.5);
 
 $zindex-ui-alert: 1060 !default;
 
