--- a/client/styles/components/common/alert/alert.scss
+++ b/client/styles/components/common/alert/alert.scss
@@ -9,6 +9,7 @@ ui-alert {
   .alert {
     /*text-align: center;*/
     box-shadow: $box-shadow-base;
+    margin-bottom: 0.5rem;
 
     .alert-message,
     .alert-link {
@@ -23,5 +24,9 @@ ui-alert {
     .alert-link {
       color: rgba(0, 0, 0, 0.20);
     }
+  }
+
+  .alert-count {
+    vertical-align: middle;
   }
 }
