--- a/client/styles/_variables.scss
+++ b/client/styles/_variables.scss
@@ -32,7 +32,7 @@ $gray-light:                #818a91 !default;
 $gray-lighter:              #eceeef !default;
 $gray-lightest:             #f7f7f9 !default;
 
-$brand-primary:             #0275d8 !default;
+$brand-primary:             rgb(49, 112, 143) !default;
 $brand-success:             #5cb85c !default;
 $brand-info:                #5bc0de !default;
 $brand-warning:             #f0ad4e !default;
@@ -212,8 +212,8 @@ $border-radius:          0 !default;
 $border-radius-lg:       0 !default;
 $border-radius-sm:       0 !default;
 
-$component-active-color: #fff !default;
-$component-active-bg:    $brand-primary !default;
+$component-active-color: $brand-primary !default;
+$component-active-bg:    rgba(255, 255, 255, 0.05) !default;
 
 $caret-width:            .3em !default;
 $caret-width-lg:         $caret-width !default;
@@ -330,21 +330,21 @@ $form-icon-danger: "data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My
 //
 // Dropdown menu container and contents.
 
-$dropdown-bg:                    #fff !default;
-$dropdown-border-color:          rgba(0,0,0,.15) !default;
+$dropdown-bg:                    rgba(0, 0, 0, 0.75) !default;
+$dropdown-border-color:          transparent !default;
 $dropdown-border-width:          $border-width !default;
-$dropdown-divider-bg:            #e5e5e5 !default;
+$dropdown-divider-bg:            $component-active-bg !default;
 
-$dropdown-link-color:            $gray-dark !default;
-$dropdown-link-hover-color:      darken($gray-dark, 5%) !default;
-$dropdown-link-hover-bg:         #f5f5f5 !default;
+$dropdown-link-color:            $gray !default;
+$dropdown-link-hover-color:      $gray-light !default;
+$dropdown-link-hover-bg:         rgba(255, 255, 255, 0.05) !default;
 
 $dropdown-link-active-color:     $component-active-color !default;
 $dropdown-link-active-bg:        $component-active-bg !default;
 
 $dropdown-link-disabled-color:   $gray-light !default;
 
-$dropdown-header-color:          $gray-light !default;
+$dropdown-header-color:          $brand-primary !default;
 
 
 // Z-index master list
@@ -477,12 +477,12 @@ $state-danger-border:            transparent !default;
 // Cards
 $card-spacer-x:            1.25rem !default;
 $card-spacer-y:            .75rem !default;
-$card-border-width:        1px !default;
+$card-border-width:        0 !default;
 $card-border-radius:       $border-radius !default;
 $card-border-color:        #e5e5e5 !default;
 $card-border-radius-inner: $card-border-radius !default;
 $card-cap-bg:              #f5f5f5 !default;
-$card-bg:                  #fff !default;
+$card-bg:                  rgba(0, 0, 0, 0.25) !default;
 
 $card-link-hover-color:    #fff !default;
 
