--- a/client/styles/components/app.scss
+++ b/client/styles/components/app.scss
@@ -1,6 +1,9 @@
 body,
 html,
-music-tools {
+music-tools,
+.app-wrapper,
+.app,
+.content-container{
   display: block;
   position: relative;
   height: 100%;
@@ -8,20 +11,32 @@ music-tools {
   overflow: hidden;
 }
 
+// Remove outline on link and buttons
+a,
+button,
+input[type=button],
+input[type=submit],
+input[type=reset] {
+  outline: 0 !important;
+}
+
 music-tools {
   background: url("../images/background.jpg") repeat scroll center top;
-  padding-top:  $header-height;
-  padding-left: $menu-width; // Add sidebar space
-
-  // For small screens
-  @include media-breakpoint-down(sm) {
-    padding-left: 0; // Remove sidebar space
-    padding-bottom: $menu-height;// Add bottom bar space
-  }
 
   -webkit-transform-style: preserve-3d;
   -moz-transform-style: preserve-3d;
   transform-style: preserve-3d;
+
+}
+
+.app-wrapper {
+  &.push-content {
+    padding-left: $push-menu-size;
+  }
+}
+
+.app {
+  padding-top:  $header-height;
 }
 
 .app-loading {
@@ -38,6 +53,16 @@ music-tools {
   }
 }
 
+.content-container {
+  padding-left: $menu-width; // Add sidebar space
+
+  // For small screens
+  @include media-breakpoint-down(sm) {
+    padding-left: 0; // Remove sidebar space
+    padding-bottom: $menu-height;// Add bottom bar space
+  }
+}
+
 .content {
   position: relative;
   height: 100%;
@@ -46,4 +71,14 @@ music-tools {
   padding-bottom: $grid-gutter-width / 2;
   background: $content-bg;
   box-shadow: $content-shadow;
+
+  .content-header {
+    border-top: 1px solid $brand-primary;
+    color: $brand-primary;
+    font-size: 1.3rem;
+    font-variant: small-caps;
+    padding-top: 5px;
+    padding-left: 10px;
+    margin-bottom: $card-spacer-y;
+  }
 }
