--- a/client/styles/components/common/header/header.scss
+++ b/client/styles/components/common/header/header.scss
@@ -1,5 +1,5 @@
 ui-header {
-  position: fixed;
+  position: absolute;
   z-index: $zindex-navbar-fixed;
   left: 0;
   right: 0;
@@ -22,6 +22,7 @@ ui-header {
     .header-menu-block {
       .header-menu {
         display: inline-block;
+        vertical-align: middle;
       }
     }
   }
