--- a/client/styles/components/common/menu/menu.scss
+++ b/client/styles/components/common/menu/menu.scss
@@ -1,5 +1,5 @@
 ui-menu {
-  position: fixed;
+  position: absolute;
   background: $menu-bg;
 
   .menu-group-toggle {
@@ -12,14 +12,25 @@ ui-menu {
     padding: 0;
     margin: 0;
 
+    li {
+      margin: 1px 0;
+    }
+
     a {
       position: relative;
       color: $menu-color;
       font-size: $menu-font-size;
       display: block;
 
+      &:hover,
+      &:focus {
+        background: rgba(0, 0, 0, 0.25);
+        color: $menu-hover-color;
+      }
+
       /* Active route */
       &.router-link-active {
+        background: rgba(0, 0, 0, 0.25);
         color: $menu-active-color;
       }
     }
@@ -29,7 +40,7 @@ ui-menu {
 // Large screens
 @include media-breakpoint-up(sm) {
   ui-menu {
-    top: $header-height;
+    top: 0;
     left: 0;
     right: auto;
     bottom: 0;
@@ -37,6 +48,12 @@ ui-menu {
 
     .menu-group {
       display: block;
+      /*padding: 1px 0;*/
+      border-bottom: 2px solid rgba(0, 0, 0, 0.25);
+
+      &:last-child {
+        border-bottom: none;
+      }
     }
 
     .menu-group-toggle {
@@ -52,13 +69,15 @@ ui-menu {
         line-height: 1;
 
         /* Active route */
-        &.router-link-active:after {
-          position: absolute;
-          top: 0;
-          bottom: 0;
-          right: 2px;
-          content: " ";
-          border-right: 2px solid $menu-active-color;
+        &.router-link-active {
+          &:after {
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            right: 0;
+            content: " ";
+            border-right: 2px solid $menu-active-color;
+          }
         }
 
         .menu-link-label {
