--- a/client/styles/components/user/menu.scss
+++ b/client/styles/components/user/menu.scss
@@ -1,3 +1,79 @@
 user-menu {
+  background: rgba(0, 0, 0, 0.5);
 
+  .btn {
+    padding: $navbar-padding-vertical 0;
+    background: none;
+    border: none;
+    width: $menu-width;
+
+    .user-avatar {
+      width: $user-avatar-size;
+      height: $user-avatar-size;
+      border-radius: 50%;
+      border: 2px solid transparent;
+    }
+
+    &.active {
+      .user-avatar {
+        border: 2px solid $brand-primary;
+      }
+    }
+  }
+
+  .user-menu-block {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    width: $push-menu-size;
+    background: rgba(0, 0, 0, 0.5);
+    display: none;
+
+    &.open {
+      display: block;
+    }
+
+    .user-menu-header {
+      color: $brand-primary;
+      height: $header-height;
+      line-height: $header-height;
+      vertical-align: middle;
+      /*border-bottom: 1px solid $component-active-bg;*/
+      padding-left: 10px;
+      background: rgba(0, 0, 0, 0.25);
+    }
+
+    .user-menu-logout {
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      right: 0;
+    }
+
+    .user-menu-item {
+      padding: 10px;
+      display: block;
+      color: $gray;
+      margin: 1px 0;
+
+      .fa {
+        margin-right: 5px;
+      }
+
+      &:hover,
+      &:focus {
+        color: $gray-light;
+        background: $component-active-bg;
+        text-decoration: none;
+      }
+
+      &.router-link-active {
+        padding-left: 8px;
+        border-left: 2px solid $component-active-color;
+        color: $component-active-color;
+        background: $component-active-bg;
+      }
+    }
+  }
 }
