work on themes and instruments

--- a/client/src/components/common/alert/alert.component.html
+++ b/client/src/components/common/alert/alert.component.html
@@ -29,32 +29,33 @@
     </a>
 </div>
 
+<!--
 <div *ngIf="alerts.length > 1" class="text-center">
-    <!-- Other success -->
+    &lt;!&ndash; Other success &ndash;&gt;
     <span class="alert-icon fa-stack">
         <span class="fa fa-circle-thin fa-stack-2x"></span>
         <span class="fa fa-stack-1x fa-check"></span>
     </span>
     <span class="alert-count">0</span>
 
-    <!-- Other danger -->
+    &lt;!&ndash; Other danger &ndash;&gt;
     <span class="alert-icon fa-stack">
         <span class="fa fa-circle-thin fa-stack-2x"></span>
         <span class="fa fa-stack-1x fa-minus"></span>
     </span>
     <span class="alert-count">2</span>
 
-    <!-- Other warning -->
+    &lt;!&ndash; Other warning &ndash;&gt;
     <span class="alert-icon fa-stack">
         <span class="fa fa-circle-thin fa-stack-2x"></span>
         <span class="fa fa-stack-1x fa-exclamation"></span>
     </span>
     <span class="alert-count">10</span>
 
-    <!-- Other info -->
+    &lt;!&ndash; Other info &ndash;&gt;
     <span class="alert-icon fa-stack">
         <span class="fa fa-circle-thin fa-stack-2x"></span>
         <span class="fa fa-stack-1x fa-info"></span>
     </span>
     <span class="alert-count">0</span>
-</div>
+</div>-->
