--- a/client/styles/components/common/_menu.scss
+++ b/client/styles/components/common/_menu.scss
@@ -24,13 +24,13 @@ ui-menu {
 
       &:hover,
       &:focus {
-        background: rgba(0, 0, 0, 0.25);
+        background: rgba(0, 0, 0, 0.35);
         color: $menu-hover-color;
       }
 
       /* Active route */
       &.router-link-active {
-        background: rgba(0, 0, 0, 0.25);
+        background: rgba(0, 0, 0, 0.35);
         color: $menu-active-color;
       }
     }
@@ -48,8 +48,7 @@ ui-menu {
 
     .menu-group {
       display: block;
-      /*padding: 1px 0;*/
-      border-bottom: 2px solid rgba(0, 0, 0, 0.25);
+      border-bottom: 2px solid rgba(0, 0, 0, 0.35);
 
       &:last-child {
         border-bottom: none;
@@ -114,7 +113,7 @@ ui-menu {
     }
 
     .menu-group-links {
-      // Hide links (will be displayed by click on .menu-group-toggle)
+      // Hide links (will be displayed by clicking on .menu-group-toggle)
       display: none;
 
       &.open {
