override card styles

--- a/client/styles/bootstrap/_card.scss
+++ b/client/styles/bootstrap/_card.scss
@@ -10,6 +10,8 @@
 
   .card-header {
     color: $gray-light;
+    border-bottom: none;
+    border-top: 2px solid $card-border-color;
   }
 
   .card-img {
