--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -20,6 +20,7 @@
 @import 'components/app';
 @import 'components/common/common';
 @import 'components/instrument/main';
+@import 'components/instrument/detail';
 @import 'components/instrument/menu';
 @import 'components/theory/theory';
 @import 'components/user/menu';
