--- a/client/src/components/instrument/detail.component.html
+++ b/client/src/components/instrument/detail.component.html
@@ -1,5 +1,59 @@
-<div class="container-fluid">
+<div class="container-fluid" *ngIf="instrument">
     <h1 class="content-header">
         {{ instrument.attributes.name }}
     </h1>
+
+    <div class="row">
+        <div class="col-md-2">
+            <div class="card" style="margin-bottom: 20px;">
+                <div class="card-header">
+                    {{ instrument.relationships.instrumentType.data.attributes.name }}
+                </div>
+                <img class="card-img instrument-type" data-src="{{ 'dist/images/' + instrument.relationships.instrumentType.data.attributes.icon }}" />
+            </div>
+
+            <div style="margin-bottom: 20px;">
+                <ui-flag data-type="primary" data-value="isFavorite">
+                    <span class="fa fa-heart"></span>
+                    <span>Favorite</span>
+                </ui-flag>
+
+                <ui-flag data-type="info" data-value="isDefault">
+                    <span class="fa fa-check-square-o"></span>
+                    <span>Default</span>
+                </ui-flag>
+            </div>
+
+            <a href="" class="btn btn-sm btn-block btn-danger">
+                <span class="fa fa-fw fa-trash-o"></span>
+                Delete instrument
+            </a>
+        </div>
+
+        <div class="col-md-10">
+            <!-- Generic instrument information -->
+            <div class="card">
+                <div class="card-block">
+                    <div class="row">
+                        <!-- Manufacturer of the Instrument -->
+                        <div class="form-group col-md-6">
+                            <label class="control-label" for="instrument-manufacturer">Manufacturer</label>
+                            <input type="text" class="form-control" id="instrument-manufacturer" data-ng-model="instrument.attributes.manufacturer" data-on-typing-stop="showCtrl.save()" />
+                        </div>
+
+                        <!-- Model of the Instrument -->
+                        <div class="form-group col-md-6">
+                            <label class="control-label" for="instrument-model">Model</label>
+                            <input type="text" class="form-control" id="instrument-model" data-ng-model="instrument.attributes.model" data-on-typing-stop="showCtrl.save()" />
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div data-ng-if="showCtrl.resource.relationships.instrumentType"
+                 data-ng-include="'Specification/' + instrument.relationships.instrumentType.data.attributes.prefix + '/details.html'|partial_path:'app/Instrument'"
+                 onload="specification = showCtrl.resource.relationships.specification.data">
+            </div>
+        </div>
+    </div>
 </div>
