--- a/client/src/components/theory/note/format-menu.component.html
+++ b/client/src/components/theory/note/format-menu.component.html
@@ -1,7 +1,9 @@
-<a href="">
-    &#9837;
-</a>
+<div>
+    <a href="">
+        &#9837;
+    </a>
 
-<a href="">
-    &#35;
-</a>
+    <a href="">
+        &#35;
+    </a>
+</div>
