--- a/client/src/components/theory/summary.component.html
+++ b/client/src/components/theory/summary.component.html
@@ -1,63 +1,39 @@
 <div class="container-fluid">
-    <h1 class="content-header">
-        Theory
-    </h1>
-
-    <!--<div class="list-group">
-        <a class="list-group-item" href="#/theory/intervals">Intervals</a>
-
-        <a class="list-group-item" href="#/theory/notes">Notes</a>
-
-        <a class="list-group-item" href="#/theory/degrees">Degrees</a>
-
-        <a class="list-group-item" href="#/theory/chords">Chords</a>
-
-        <a class="list-group-item" href="#/theory/scales">Scales</a>
-    </div>-->
+    <h1 class="content-header">Theory</h1>
 
     <div class="card-group">
         <div class="card">
-            <img class="card-img-top" data-src="..." alt="Card image cap">
-            <div class="card-block">
-                <h4 class="card-title">Intervals</h4>
-                <!--<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>-->
-            </div>
-        </div>
-
-        <div class="card">
-            <img class="card-img-top" data-src="..." alt="Card image cap">
+            <img class="card-img-top" alt="Notes icon" src="" data-src="..." />
             <div class="card-block">
                 <h4 class="card-title">Notes</h4>
-                <!--<p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>-->
             </div>
         </div>
 
         <div class="card">
-            <img class="card-img-top" data-src="..." alt="Card image cap">
+            <img class="card-img-top" alt="Intervals icon" src="" data-src="..." />
+            <div class="card-block">
+                <h4 class="card-title">Intervals</h4>
+            </div>
+        </div>
+
+        <div class="card">
+            <img class="card-img-top" alt="Degrees icon" src="" data-src="..." />
             <div class="card-block">
                 <h4 class="card-title">Degrees</h4>
-                <!--<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>-->
             </div>
         </div>
 
         <div class="card">
-            <img class="card-img-top" data-src="..." alt="Card image cap">
+            <img class="card-img-top" alt="Chords icon" src="" data-src="..." />
             <div class="card-block">
                 <h4 class="card-title">Chords</h4>
-                <!--<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>-->
             </div>
         </div>
 
         <div class="card">
-            <img class="card-img-top" data-src="..." alt="Card image cap">
+            <img class="card-img-top" alt="Scales icon" src="" data-src="..." />
             <div class="card-block">
                 <h4 class="card-title">Scales</h4>
-                <!--<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>-->
             </div>
         </div>
     </div>
