implement instrument menu

--- a/client/src/components/instrument/menu.component.html
+++ b/client/src/components/instrument/menu.component.html
@@ -1,1 +1,12 @@
-Instrument menu
+<div class="dropdown" [ngClass]="{open: opened}">
+    <a class="dropdown-toggle" role="button" id="instrumentDropdown" aria-haspopup="true" (click)="opened = !opened">
+        Dropdown
+    </a>
+
+    <div class="dropdown-menu" aria-labelledby="instrumentDropdown">
+        <a class="dropdown-item" href="#" *ngFor="let instrument of instruments">
+            <img class="instrument-type" data-src="{{ 'dist/images/' + instrument.relationships.instrumentType.data.attributes.icon }}" alt="Instrument icon" />
+            {{ instrument.attributes.name }}
+        </a>
+    </div>
+</div>
